micronfig_macros/tests/sources/wrong_nonsense_1.stderr
error: expected `,`
 --> tests/sources/wrong_nonsense_1.rs:2:11
  |
2 |     garasauto!"68"3469l
  |              ^
