micronfig_macros/tests/sources/wrong_nonsense_1.rs
micronfig::config! {
	garasauto!"68"3469l
}

fn main() {

}